Adjust projects structure

--- a/NerdsVirtualSpace.Tests/NVS.Web.Core.Tests.csproj
+++ b/NerdsVirtualSpace.Tests/NVS.Web.Core.Tests.csproj
@@ -52,9 +52,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NerdsVirtualSpace\NerdsVirtualSpace.csproj">
+    <ProjectReference Include="..\NerdsVirtualSpace\NVS.Web.Core.csproj">
       <Project>{EE5544E9-73E6-40C4-916D-013BFF716304}</Project>
-      <Name>NerdsVirtualSpace</Name>
+      <Name>NVS.Web.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
