add basic implementation with 1 generic unit test case used to generate code.

--- a/NVS.Common.Infrastructure/NVS.Common.Infrastructure.csproj
+++ b/NVS.Common.Infrastructure/NVS.Common.Infrastructure.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessagesManager\MessageHub.cs" />
-    <Compile Include="MessagesManager\IMessageHub.cs" />
+    <Compile Include="Messaging\Broadcaster.cs" />
+    <Compile Include="Messaging\Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
