--- a/NVS.Common.Infrastructure.Test/NVS.Common.Infrastructure.Test.csproj
+++ b/NVS.Common.Infrastructure.Test/NVS.Common.Infrastructure.Test.csproj
@@ -45,13 +45,21 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="BroadcasterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NVS.Common.Infrastructure\NVS.Common.Infrastructure.csproj">
+      <Project>{1c950383-d37b-49d1-92d1-2bd11b3802aa}</Project>
+      <Name>NVS.Common.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
