--- a/NVS.Common.Infrastructure.Test/NVS.Common.Infrastructure.Test.csproj
+++ b/NVS.Common.Infrastructure.Test/NVS.Common.Infrastructure.Test.csproj
@@ -52,7 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="BroadcasterTest.cs" />
+    <Compile Include="Messaging\BroadcasterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
