add a non-generic type of IMessage and depend on it inside the broadcaster

--- a/NVS.Common.Infrastructure/NVS.Common.Infrastructure.csproj
+++ b/NVS.Common.Infrastructure/NVS.Common.Infrastructure.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Messaging\TextBroadcaster.cs" />
+    <Compile Include="Messaging\Broadcaster.cs" />
     <Compile Include="Messaging\IBroadcaster.cs" />
     <Compile Include="Messaging\IMessage.cs" />
     <Compile Include="Messaging\TextMessage.cs" />
